# MiPC

./: .gitignore  README.md  README_JA.md  pyproject.toml
.github/workflows/: build.yml  main.yml  test.yml
MiPC/: Misskey.py  __init__.py  exceptions.py  http.py
MiPC/MiAuth/: __init__.py  __main__.py  create_session.py  example.json  新規 Python File.py
assets/: README.md
example/: MiAuth.py  StreamClient.py  note.py
