[tool.poetry]
name = "misskey-python"
version = "1.3-deprecated"
description = "This project has been discontinued; equivalent functionality is available at sonyakun/misspy."
authors = ["sonyakun"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "MiPC/*" }
]
repository = "https://github.com/MiPC-Dev/MiPC"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
pytest = "^7.3.1"
websockets = "^11.0.3"
aiofiles = "^23.1.0"
colorama = "^0.4.6"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
